cleaned up media queries.

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,39 +1,58 @@
 <!DOCTYPE html>
-<html lang="en-us">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <title>Matt Wigdahl | Portfolio</title>
-    </head>
-    <body>
-        <header>
-            <div class="contain">
-                <h1 class="logo">
-                    <a href="index.html">Matt Wigdahl</a>
-                </h1>
-                <nav>
-                    <a href="index.html">About</a>
-                    <a href="portfolio.html">Portfolio</a>
-                    <a id="last" href="contact.html">Contact</a>
-                </nav>
-           </div>
-        </header>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title>Matt Wigdahl | Portfolio</title>
+</head>
+
+<body>
+    <header>
+        <div class="contain">
+            <h1 class="logo">
+                <a href="index.html">Matt Wigdahl</a>
+            </h1>
+            <nav>
+                <a href="index.html">About</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a id="last" href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+    <div class="box-in">
         <div class="container clearfix">
             <section class="content">
                 <section class="main">
                     <h2>Portfolio</h2>
-                    <hr/>
-                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="Hangman"><h3>Hangman</h3></a></article>
-                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="RPG Game"><h3>RPG Game</h3></a></article>
-                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="Trivia Game"><h3>Trivia Game</h3></a></article>
-                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="Rutgers Info Widget"><h3>Rutgers Info Widget</h3></a></article>
-                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="Rock Paper Scissors"><h3>Rock Paper Scissors</h3></a></article>
+                    <hr />
+                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="Hangman">
+                            <h3>Hangman</h3>
+                        </a></article>
+                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="RPG Game">
+                            <h3>RPG Game</h3>
+                        </a></article>
+                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300" alt="Trivia Game">
+                            <h3>Trivia Game</h3>
+                        </a></article>
+                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300"
+                                alt="Rutgers Info Widget">
+                            <h3>Rutgers Info Widget</h3>
+                        </a></article>
+                    <article class="portItem"><a href="#"><img src="https://via.placeholder.com/300"
+                                alt="Rock Paper Scissors">
+                            <h3>Rock Paper Scissors</h3>
+                        </a></article>
                 </section>
             </section>
         </div>
-        <div id="push"></div>
-        <footer><p>Copyright &copy;</p></footer>
-    </body>
+    </div>
+    <div id="push"></div>
+    <footer>
+        <p>Copyright &copy;</p>
+    </footer>
+</body>
+
 </html>
